package ex2;

public class BurgerChef extends ChefMiddleware{
    
    public BurgerChef() {
        super(FoodType.BURGER);
    }
}
