package ex2;

public class DessertChef extends ChefMiddleware {
        
    public DessertChef() {
        super(FoodType.DESSERT);
    }
}
