package ex2;

public class PastaChef extends ChefMiddleware {
        
    public PastaChef() {
        super(FoodType.PASTA);
    }
}
