package ex2;

public class PizzaChef extends ChefMiddleware {

    public PizzaChef() {
        super(FoodType.PIZZA);
    }
}
