package ex2;

public class SushiChef extends ChefMiddleware{
        
    public SushiChef() {
        super(FoodType.SUSHI);
    }
}
